# agentic-workflow-medallion-pipeline

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_FLOW.md  CLAUDE.md  CODEX_MANUAL.md  CODEX_TRACKS_PROMPT.md  README.md  RESTRUCTURE_PLAN.md  pyproject.toml
conductor/: index.md  (+6 more)
observer-framework/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
observer-framework/deploy/: create_observer_workflow.py
observer-framework/docs/: ARCHITECTURE.md  EXTENDING.md  USAGE.md
observer-framework/notebooks/: collect_and_fix.py  trigger_sentinel.py
observer-framework/observer/: __init__.py  config.py  dedup.py  persistence.py  redaction.py  validator.py  workflow_observer.py
observer-framework/observer/chat/: __init__.py  anthropic.py  base.py  google.py  openai.py  openai_compatible.py  registry.py
observer-framework/observer/providers/: __init__.py  anthropic_provider.py  base.py  github_provider.py  google_provider.py  openai_provider.py  path_allowlist.py
observer-framework/scripts/: sync_databricks_repo.py  update_pr_feedback.py
observer-framework/templates/: dashboard_queries.sql
observer-framework/tests/: test_chat_anthropic.py  test_chat_base.py  test_chat_registry.py  test_config.py  test_dedup.py  test_feedback.py  test_github_report_pr.py  test_multifile.py  test_path_allowlist.py  test_persistence.py  test_prompt_injection.py  test_redaction.py  test_triggering.py  test_validator.py  test_validator_imports.py  test_workflow_observer.py
observer-framework/tests/contracts/: conftest.py  test_anthropic_contract.py
pipeline/: observer_config.yaml  pyproject.toml
pipeline/deploy/: create_observer_workflow.py  create_workflow.py  dashboard_queries.sql  setup_catalog.py  trigger_chaos.py  update_pr_feedback.py
pipeline/notebooks/: agent_post.py  agent_pre.py
pipeline/notebooks/bronze/: ingest.py
pipeline/notebooks/gold/: agent_performance.py  analytics.py  campaign_roi.py  churn_reengagement.py  competitor_intel.py  email_providers.py  first_contact_resolution.py  funnel.py  lead_scoring.py  negotiation_complexity.py  outcome_prediction.py  segmentation.py  sentiment.py  sentiment_ml.py  temporal_analysis.py
pipeline/notebooks/observer/: collect_and_fix.py  trigger_sentinel.py
pipeline/notebooks/silver/: dedup_clean.py  enrichment.py  entities_mask.py
pipeline/notebooks/validation/: checks.py
pipeline/pipeline_lib/agent/: github_pr.py  llm_diagnostics.py
pipeline/pipeline_lib/agent/observer/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  config.py  dedup.py  persistence.py  triggering.py  validator.py  workflow_observer.py
pipeline/pipeline_lib/extractors/: plate.py  price.py  vehicle.py
pipeline/pipeline_lib/masking/: format_preserving.py  hash_based.py
pipeline/pipeline_lib/schema/: validator.py
pipeline/pipeline_lib/storage/: __init__.py  s3_client.py
pipeline/tests/test_deploy/: test_create_observer_workflow.py  test_create_workflow.py
pipeline/tests/test_extractors/: test_competitor.py  test_cpf.py  test_phone.py  test_vehicle.py
pipeline/tests/test_observer/: test_config.py  test_dedup.py  test_feedback.py  test_multifile.py  test_persistence.py  test_triggering.py  test_validator.py  test_workflow_observer.py
pipelines/pipeline-seguradora-whatsapp/: observer_config.yaml  pyproject.toml
pipelines/pipeline-seguradora-whatsapp/config/: gold_phases.yaml
pipelines/pipeline-seguradora-whatsapp/deploy/: create_workflow.py  setup_catalog.py  trigger_chaos.py  trigger_run.py  upload_data.py  upload_notebooks.py
pipelines/pipeline-seguradora-whatsapp/notebooks/: pre_check.py
pipelines/pipeline-seguradora-whatsapp/notebooks/bronze/: ingest.py
pipelines/pipeline-seguradora-whatsapp/notebooks/gold/: agent_performance.py  analytics.py  campaign_roi.py  churn_reengagement.py  competitor_intel.py  email_providers.py  first_contact_resolution.py  funnel.py  lead_scoring.py  negotiation_complexity.py  outcome_prediction.py  segmentation.py  sentiment.py  sentiment_ml.py  temporal_analysis.py
pipelines/pipeline-seguradora-whatsapp/notebooks/silver/: dedup_clean.py  enrichment.py  entities_mask.py
pipelines/pipeline-seguradora-whatsapp/notebooks/validation/: checks.py
pipelines/pipeline-seguradora-whatsapp/pipeline_lib/extractors/: cep.py  cpf.py  email.py
pipelines/pipeline-seguradora-whatsapp/pipeline_lib/masking/: redaction.py
pipelines/pipeline-seguradora-whatsapp/pipeline_lib/orchestration/: __init__.py  phased_runner.py
pipelines/pipeline-seguradora-whatsapp/pipeline_lib/schema/: __init__.py  conformance.py  contracts.py
pipelines/pipeline-seguradora-whatsapp/pipeline_lib/storage/: s3_client.py
pipelines/pipeline-seguradora-whatsapp/pipeline_lib/validation/: __init__.py  delta_stats.py
pipelines/pipeline-seguradora-whatsapp/tests/fixtures/: __init__.py  test_whatsapp_samples.py  whatsapp_samples.py
pipelines/pipeline-seguradora-whatsapp/tests/test_deploy/: test_create_workflow.py
pipelines/pipeline-seguradora-whatsapp/tests/test_extractors/: test_cep.py  test_integration.py
pipelines/pipeline-seguradora-whatsapp/tests/test_masking/: test_format_preserving.py
pipelines/pipeline-seguradora-whatsapp/tests/test_orchestration/: test_phased_runner.py
pipelines/pipeline-seguradora-whatsapp/tests/test_schema/: test_conformance.py  test_validator.py
pipelines/pipeline-seguradora-whatsapp/tests/test_storage/: test_s3_client.py
pipelines/pipeline-seguradora-whatsapp/tests/test_validation/: test_delta_stats.py
platform/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  init-databases.sql  omni-entrypoint.sh  omni.Dockerfile  pyproject.toml
platform/backend/app/: main.py
platform/backend/app/api/: deps.py
platform/backend/app/core/: config.py  exceptions.py  security.py  url_validator.py
platform/backend/app/database/: seed.py  session.py
platform/backend/scripts/: cleanup_all.py  vps_databricks_diag.py  vps_list_users.py  vps_run_logs.py  vps_sql_query.py  vps_trigger_databricks_job.py  vps_upload_workspace_file.py
(+634 files in other folders)
