[project]
name = "flowertex-platform-backend"
version = "0.1.0"
description = "Backend da plataforma conversacional para pipelines Medallion"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Pin bcrypt: 4.1+ quebra com passlib 1.7.x (detect_wrap_bug usa senha >72 bytes)
    "bcrypt>=4.0.0,<4.1",
    "cryptography>=43.0.0",
    "email-validator>=2.0.0",  # pydantic EmailStr em auth schemas
    "httpx>=0.28.0",
    "redis[hiredis]>=5.2.0",
    # observer-framework — chat provider + T1 hardening. Editable local
    # em dev; em prod migra para `observer[anthropic]>=0.9.0,<1.0.0`
    # via GitHub Packages. `anthropic` vem transitivamente.
    "observer[anthropic]>=0.9.0,<1.0.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    # Real saga runner deps — usadas pelo RealSagaRunner para deploy programatico
    "databricks-sdk>=0.40.0",
    "boto3>=1.34.0",
    "qrcode>=8.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[tool.uv]
# Garante que o venv resolva o bcrypt pinado (passlib nao declara o upper bound)
override-dependencies = [
    "bcrypt<4.1",
]

[tool.uv.sources]
# observer-framework local path. Docker preserva layout (WORKDIR
# /app/platform/backend + observer em /app/observer-framework) pra
# mesmo relative path `../../observer-framework` funcionar em host + container.
observer = { path = "../../observer-framework", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() em defaults e padrao aceito

[tool.ruff.lint.per-file-ignores]
"app/database/migrations/**" = ["E501", "UP007", "UP035", "I001"]  # Auto-gerado pelo Alembic

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# Garante que fixtures e testes async compartilham a mesma loop por sessao
# (senao engine session-scoped + funcoes tests colidem "different loop")
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
